# csamaf.github.io

./: .mailmap  .markdown_link_check_config.json  .pre-commit-config.yaml  .pymarkdown.yml  Makefile  README.md  about.md  blog.md  conf.py  index.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: build_and_deploy.yml  sanity_checks_for_prs.yml
about/: felix.md  rene.md
blog/2024/: 05-adding-new-author.md  05-enable-giscuss.md  05-enable-opt-out-of-giscus-comments.md  05-introducing-felix-schindler.md  05-introducing-rene.md  06-pycharm-debugger-problems.md  06-pycharm-matplotlib.md  09-tandoor-setup.md  start.md
csamaf_blog/: new_til.py
csamaf_blog/2024/: 05-adding-new-author.md  05-enable-giscuss.md  05-introducing-felix-schindler.md
static/: custom.css
templates/: hello.html  layout.html
